# Video-Special-Effects

./: .gitignore  CMakeLists.txt  DA2Network.hpp  README.md  filter.cpp  filter.hpp  vidDisplay.cpp
faceDetect/: CMakeLists.txt
